# GGE

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs.yml  publish.yml  test.yml  tests.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md  quickstart.md
docs/guide/: cli.md  metrics.md  visualizations.md
examples/: demo_gge.ipynb  demo_model_comparison.ipynb  run_evaluation.py  test_all_readme_claims.ipynb
guide/cli/: index.html
guide/metrics/: index.html
guide/visualizations/: index.html
installation/: index.html
notebooks/: exploratory_analysis.ipynb
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/contributing/: index.html
site/guide/cli/: index.html
site/guide/metrics/: index.html
site/guide/visualizations/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/gge/: __init__.py  cli.py  config.py  evaluator.py  spaces.py  testing.py
src/gge/data/: loader.py
src/gge/metrics/: __init__.py  base_metric.py  correlation.py  distances.py
src/gge/utils/: __init__.py  deg.py  pca.py
src/gge/visualization/: __init__.py  interactive.py  visualizer.py
tests/: __init__.py  conftest.py  fixtures.py  test_data.py  test_deg.py  test_evaluator.py  test_integration.py  test_metrics.py  test_pca.py  test_visualization.py
