[tool.poetry]
name = "gge-eval"
version = "0.1.6"
description = "Generated Genetic Expression Evaluator (GGE): Comprehensive evaluation of generated gene expression data. Computes metrics between real and generated datasets with support for condition matching, train/test splits, and publication-quality visualizations."
authors = ["GGE Team <gge@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AndreaRubbi/GGE"
repository = "https://github.com/AndreaRubbi/GGE"
documentation = "https://andrearubbi.github.io/GGE/"
keywords = ["gene expression", "evaluation", "metrics", "single-cell", "generative models", "benchmarking", "gge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "gge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
anndata = ">=0.8.0"
scanpy = ">=1.9.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
torch = ">=1.9.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
geomloss = ">=0.2.1"
pykeops = {version = ">=1.4.0", optional = true}
umap-learn = {version = ">=0.5.0", optional = true}
plotly = {version = ">=5.0.0", optional = true}
scikit-learn = ">=1.0.0"

[tool.poetry.extras]
full = ["pykeops", "umap-learn", "plotly"]
gpu = ["pykeops"]
interactive = ["plotly"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
flake8 = ">=6.0.0"
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
mkdocstrings = {version = ">=0.24.0", extras = ["python"]}

[tool.poetry.scripts]
gge = "gge.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
]