[metadata]
name = geneval
version = 0.1.0
description = A gene expression evaluation system.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/geneval
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    anndata
    scanpy
    pandas
    numpy
    scipy
    torch
    geomloss
    pykeops

[options.packages.find]
where = src