[metadata]
name = gge-eval
version = 0.1.1
description = Generated Genetic Expression Evaluator (GGE): Comprehensive evaluation of generated gene expression data.
long_description = file: README.md
long_description_content_type = text/markdown
author = GGE Team
author_email = gge@example.com
url = https://github.com/AndreaRubbi/gge
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    anndata
    scanpy
    pandas
    numpy
    scipy
    torch
    geomloss
    pykeops

[options.packages.find]
where = src